--- a/config/samples/not_wva/manifests/hpa-vllm-combined.yaml
+++ b/config/samples/not_wva/manifests/hpa-vllm-combined.yaml
@@ -14,6 +14,9 @@ spec:
     scaleUp:
       stabilizationWindowSeconds: 0
       policies:
+      - type: Percent
+        value: 100
+        periodSeconds: 15  # Double the pods every 15s when scaling
       - type: Pods
         value: 4
         periodSeconds: 15
@@ -33,7 +36,7 @@ spec:
         name: num_requests_waiting
       target:
         type: AverageValue
-        averageValue: "2"  # Scale when avg waiting requests > 2
+        averageValue: "20"  # Scale when avg waiting requests > 20
   # Scale on KV cache usage
   - type: Pods
     pods:
@@ -41,4 +44,4 @@ spec:
         name: kv_cache_usage_perc
       target:
         type: AverageValue
-        averageValue: "800m"  # 0.8 = 80% cache usage
+        averageValue: "500m"  # 0.5 = 50% cache usage
