--- a/config/samples/not_wva/workloads/sharegpt-load-job-high-30.yaml
+++ b/config/samples/not_wva/workloads/sharegpt-load-job-high-30.yaml
@@ -37,12 +37,14 @@ spec:
         - "openai"
         - "--base-url"
         - "http://vllm-service:8200"
+        # - "http://infra-workload-autoscaler-inference-gateway-istio:80"  # Update with your gateway name
         - "--dataset-name"
         - "sharegpt"
         - "--dataset-path"
         - "/data/ShareGPT_V3_unfiltered_cleaned_split.json"
         - "--model"
         - "unsloth/Meta-Llama-3.1-8B"
+        # - "Qwen/Qwen3-0.6B"
         - "--seed"
         - "12346"
         - "--num-prompts"
