experiments(wva/hpa): changed svc target to llm-d for workloads

--- a/config/samples/not_wva/workloads/sharegpt-load-job-high-20.yaml
+++ b/config/samples/not_wva/workloads/sharegpt-load-job-high-20.yaml
@@ -36,7 +36,8 @@ spec:
         - "--backend"
         - "openai"
         - "--base-url"
-        - "http://vllm-service:8200"
+        - "http://infra-inference-scheduling-inference-gateway-istio:80"  # Update with your gateway name
+        # - "http://vllm-service:8200"
         - "--dataset-name"
         - "sharegpt"
         - "--dataset-path"
