--- a/config/samples/not_wva/workloads/sharegpt-load-job-moderate-12.yaml
+++ b/config/samples/not_wva/workloads/sharegpt-load-job-moderate-12.yaml
@@ -36,7 +36,8 @@ spec:
         - "--backend"
         - "openai"
         - "--base-url"
-        - "http://vllm-service:8200"  # vLLM API endpoint
+        - "http://infra-inference-scheduling-inference-gateway-istio:80"  # Update with your gateway name
+        # - "http://vllm-service:8200"  # vLLM API endpoint
         - "--dataset-name"
         - "sharegpt"
         - "--dataset-path"
