--- a/config/samples/not_wva/workloads/sharegpt-load-job-high-20.yaml
+++ b/config/samples/not_wva/workloads/sharegpt-load-job-high-20.yaml
@@ -47,7 +47,9 @@ spec:
         - "--seed"
         - "12345"
         - "--num-prompts"
-        - "7200"  # 20 req/s for 6 minutes = 7200 prompts
+        # Calculated: 20 req/s × 900s (15 min) = 18000 prompts
+        # Using high value to ensure job runs until manually terminated
+        - "50000"  # High enough to run continuously (previous: 7200 for 6min)
         - "--max-concurrency"
         - "512"
         - "--request-rate"
