--- a/config/samples/not_wva/workloads/sharegpt-load-job-high-30.yaml
+++ b/config/samples/not_wva/workloads/sharegpt-load-job-high-30.yaml
@@ -48,7 +48,9 @@ spec:
         - "--seed"
         - "12346"
         - "--num-prompts"
-        - "10800"  # 30 req/s for 6 minutes = 10800 prompts
+        # Calculated: 30 req/s × 900s (15 min) = 27000 prompts
+        # Using high value to ensure job runs until manually terminated
+        - "50000"  # High enough to run continuously (previous: 10800 for 6min)
         - "--max-concurrency"
         - "512"
         - "--request-rate"
