workloads: changed config for longer runs

--- a/config/samples/wva-experiments/experiment-configs/model-based-high-parallel.yaml
+++ b/config/samples/wva-experiments/experiment-configs/model-based-high-parallel.yaml
@@ -24,35 +24,35 @@ metrics:
 workloads:
   - name: phase-1-high
     job_manifest: ../../not_wva/workloads/sharegpt-load-job-high-20.yaml  # 20 req/s
-    duration: 600  # 10 minutes
+    duration: 900  # 15 minutes
     start_delay: 0  # Start immediately
     description: "Phase 1: 20 req/s high baseline load"
     
   - name: phase-2-high-peak
     job_manifest: ../../not_wva/workloads/sharegpt-load-job-high-30.yaml  # 30 req/s
-    duration: 600  # 10 minutes
-    start_delay: 120  # Start 2min after experiment begins (480s overlap with phase-1)
+    duration: 900  # 15 minutes
+    start_delay: 120  # Start 2min after experiment begins (780s overlap with phase-1)
     description: "Phase 2: 30 req/s very high load (overlaps with phase 1)"
     
   - name: phase-3-high-sustained
     job_manifest: ../../not_wva/workloads/sharegpt-load-job-moderate-15.yaml  # 15 req/s
-    duration: 600  # 10 minutes
-    start_delay: 240  # Start 4min after experiment begins (480s overlap with phase-2)
+    duration: 900  # 15 minutes
+    start_delay: 240  # Start 4min after experiment begins (780s overlap with phase-2)
     description: "Phase 3: 15 req/s moderate sustained (overlaps with phase 2)"
 
 # Timeline visualization:
-# Time:    0s        120s       240s       360s       480s       600s       720s       840s
-# Job1:    [================================================================]  (20 req/s)
-# Job2:              [================================================================]  (30 req/s)
-# Job3:                         [================================================================]  (15 req/s)
-# Load:    20        50         65         65         65         45         15         0
+# Time:    0s        120s       240s       360s       480s       600s       720s       840s       960s       1080s      1140s
+# Job1:    [============================================================================================]  (20 req/s)
+# Job2:              [============================================================================================]  (30 req/s)
+# Job3:                         [============================================================================================]  (15 req/s)
+# Load:    20        50         65         65         65         65         65         65         45         15         0
 # 
 # Expected behavior with WVA model-based:
 # - 0-120s: 20 req/s (aggressive start, WVA should predict higher replica count)
 # - 120-240s: 50 req/s (job1+job2, WVA major scale-up predicted)
-# - 240-600s: 65 req/s (PEAK - all three running, maximum load test, should scale above 2)
-# - 600-720s: 45 req/s (job2+job3, still high load but decreasing)
-# - 720-840s: 15 req/s (job3 only, WVA should predict gradual scale-down)
+# - 240-900s: 65 req/s (PEAK - all three running for 11 minutes, maximum load test, should scale above 2)
+# - 900-1020s: 45 req/s (job2+job3, still high load but decreasing)
+# - 1020-1140s: 15 req/s (job3 only, WVA should predict gradual scale-down)
 
 # Output Configuration
 output:
